src/agent/cli/product/tui_app/src/bottom_pane/snapshots/lha_cli__product__tui_app__bottom_pane__unified_exec_footer__tests__render_many_sessions.snap
---
source: src/agent/cli/src/../product/tui_app/src/bottom_pane/unified_exec_footer.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 50, height: 1 },
    content: [
        "  123 background terminals running · /ps to view ·",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
    ]
}
